Changes from jTDS 1.2
=====================

12/22/2005 - David Kilzer
 o Replaced JtdsObjectFactoryUnitTest.testAllProperties() method with an
   inner class that extends DefaultPropertiesTestLibrary to make this
   test class fail automatically when a new property is added to the
   library class.  Removed stale comments in JtdsDataSourceUnitTest.
 o Fixed Bug [1386615] Connecting across domains with named pipes fails
   on Windows.  New 'useJCIFS' boolean parameter added that will force
   use of the jCIFS library on Windows for named pipe connections.
 o Updated ConnectionJDBC2UnitTest class to check for both an instance
   field and a getter for all properties.  Added "missing" getters to
   ConnecionJDBC2 class:  getAppName(), getBufferMaxMemory(),
   getBufferMinPackets(), getDatabaseName(), getMacAddress(), getNamedPipe(),
   getProgName(), getWsid().  Renamed package-private getters in
   ConnectionJDBC2 class that returned boolean values to use "get" instead
   of "is":  getLastUpdateCount(), getUseUnicode().  Moved
   DefaultPropertiesTestLibrary.ucFirst() to UnitTestBase class.
 o Fixed default path for named pipes on Sybase.  (Previous behavior
   would always default to the SQL Server path!)  Added
   DefaultProperties.getNamedPipePath() method with unit tests.

12/21/2005 - David Kilzer
 o Extracted the JtdsDataSource.addNonNullProperties() method from
   getConnection(String, String) method for easier testing.  Added inner
   test class Test_JtdsDataSource_addNonNullProperties to
   JtdsDataSourceUnitTest to test new addNonNullProperties() method.
   Replaced call to Exception.getStackTrace() in
   getConnection(String, String) with a call to Support.linkException().
   Fixed addNonNullProperties() to set the serverType parameter if it is
   not null.  Note that this does not affect Driver.parseURL() which
   ends up (re)setting that property from the URL.

12/20/2005 - David Kilzer